Code improvement